--- a/src/Home.css
+++ b/src/Home.css
@@ -58,26 +58,67 @@ h2 {
   display: flex;
   position: absolute;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   opacity: 1;
   background-color: rgba(255, 255, 255);
   border-radius: 10px;
-  width: 300px;
+  width: 400px;
   height: 400px;
-  padding: 10px;
+  padding: 0px 25px 0px 25px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
 }
 
-.activeLogInWindow form {
+.notLoggingIn {
+  display: none;
+}
+
+.notSigningIn {
+  display: none;
+}
+
+.signingIn {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: column;
+
+}
+
+.topSignUp {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 80%;
+}
+
+.signupForm {
   display: flex;
   flex-direction: column;
   z-index: 5000;
+  margin-top: -20px;
+  justify-content: center;
+  align-items: center;
 }
 
-.activeLogInWindow h2 {
+.signupForm input { 
+  width: 200px;
+  height: 25px;
+  margin-bottom: 10px;
+}
+
+.loggningIn form {
+  display: flex;
+  flex-direction: column;
+  z-index: 5000;
+  margin-top: -20px;
+}
+
+.loggningIn h2 {
   font-size: 24px;
 }
 
@@ -86,7 +127,7 @@ h2 {
   opacity: 0;
 }
 
-#email {
+#signupGmail {
   width: 200px;
   height: 25px;
   margin: 0px auto 25px auto;
@@ -97,6 +138,21 @@ h2 {
  height: 25px;
  margin: 0px auto 25px auto;
 }
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  margin-top: -20px;
+  height: 300px;
+  justify-content: space-around;
+}
+.loginForm input {
+  font-size: 18px;
+  height: 3rem;
+  margin-bottom: 10px;
+}
+
+/* cart icons */
 
 #bagIcon {
   width: 50px !important;
@@ -109,18 +165,12 @@ h2 {
   text-decoration: none; /* Remove any underline if it’s applied */
 }
 
+/* search bar */
+
 .searchBarInactive {
   height: 25px;
   width: 450px;
   border-radius: 15px;
-  border: none;
-  padding: 5px 5px 5px 8px;
-}
-
-.searchBarActive {
-  height: 25px;
-  width: 450px;
-  border-radius: 15px 15px 0px 0px;
   border: none;
   padding: 5px 5px 5px 8px;
 }
@@ -140,21 +190,47 @@ h2 {
 
 #searchItems li {
   margin-left: 5px;
-}
-
-.searchActive {
   display:flex;
   flex-direction: column;
-  position: absolute;
-  background-color: white;
-  width: 454px;
-  height: fit-content;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
   opacity: 1;
   text-decoration: none;
   list-style-type: none;
   z-index: 100;
 }
 
+.searchActive {
+  display:flex;
+  flex-direction: column;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  opacity: 1;
+  text-decoration: none;
+  list-style-type: none;
+  z-index: 100;
+}
+
+
+/* Log In */
+.topLogIn {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 30px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+
+}
+.closeButton {
+  font-weight: 800;
+  cursor: pointer;
+}
 
 /* tags */
 .filters {
@@ -165,9 +241,9 @@ h2 {
   margin: auto;
   flex-wrap: wrap;
   cursor: pointer;
-  color: whitesmoke;
+  color: rgb(255, 255, 255);
   background-color: rgba(255, 228, 196, 0.945);
-
+  
 }
 
 .dropdown {
@@ -206,6 +282,12 @@ h2 {
   opacity: 0;
   cursor: pointer;
   
+}
+
+.dropdown ul li {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: larger;
+
 }
 
 .dropdown ul li:hover {
@@ -306,6 +388,7 @@ h2 {
   display: flex;
   align-items: center;
   flex-direction: row;
+  flex-wrap: nowrap;
   margin-bottom: 50px;
 }
 
@@ -318,9 +401,13 @@ h2 {
 }
 
 .storageItemImage {
+  display: flex;
   max-width: 200px;
   max-height: 300px;
   object-fit: cover;
+  object-position: center;
+  justify-content: center;
+  align-items: center;
 }
 
 /* popular */
