--- a/src/shoppingCart.css
+++ b/src/shoppingCart.css
@@ -26,6 +26,10 @@ h2 {
   flex: 1;
 }
 
+a#title {
+  flex: 1;
+}
+
 .leftBar {
   display: flex;
   flex-direction: row;
@@ -130,6 +134,7 @@ h2 {
 }
 
 
+
 .cartItem {
   display: flex;
   position: relative;
@@ -144,6 +149,11 @@ h2 {
   margin-bottom: 50px;
   top: 150px;
   
+}
+
+#itemName {
+  max-width: 100px;
+  font-size: 20px;
 }
 
 .cartItemImage {
